--- a/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-torles/bizonylat-fuvarszamla-torles.component.html
+++ b/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-torles/bizonylat-fuvarszamla-torles.component.html
@@ -3,7 +3,7 @@
   <div class="editform-row">
     Biztosan törölni akarja erről a számláról a fuvardíjakat?
   </div>
-  <div class="editform-okcancel" style="margin-bottom: 10px">
+  <div class="editform-okcancel">
     <button class="editform-okbutton" (click)="doOk()">Ok</button>
     <button class="editform-cancelbutton" (click)="doCancel()">Mégsem</button>
   </div>
