--- a/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
+++ b/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
@@ -16,7 +16,7 @@
         <input type="text" class="editform-edit em6width" id="me"
                maxlength="10" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
                [(ngModel)]="DtoEdited.Me" name="me">
-        <button class="toolbutton" style="margin-left: 4px; display: inline-block" type="button" (click)="MeZoom()">...</button>
+        <button class="toolbutton" type="button" (click)="MeZoom()">...</button>
       </div>
 
       <div class="editform-row">
@@ -24,7 +24,7 @@
         <input type="text" class="editform-edit em6width" id="afakulcs"
                maxlength="10" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
                [(ngModel)]="DtoEdited.Afakulcs" name="afakulcs">
-        <button class="toolbutton" style="margin-left: 4px; display: inline-block" type="button" (click)="AfakulcsZoom()">...</button>
+        <button class="toolbutton" type="button" (click)="AfakulcsZoom()">...</button>
       </div>
 
       <div class="editform-row">
@@ -57,7 +57,7 @@
         <input type="text" class="editform-edit em6width" id="termekdijkt"
                maxlength="10" autocomplete="off" style="background-color: aquamarine; display: inline-block"
                [(ngModel)]="DtoEdited.Termekdijkt" name="termekdijkt">
-        <button class="toolbutton" style="margin-left: 4px; display: inline-block" type="button" (click)="TermekdijZoom()">...</button>
+        <button class="toolbutton" type="button" (click)="TermekdijZoom()">...</button>
       </div>
 
       <div class="editform-row">
