--- a/src/app/ngm/ngm.component.html
+++ b/src/app/ngm/ngm.component.html
@@ -32,7 +32,7 @@
         <div class="editform-row-block">
           <input type="text" class="editform-edit em10width" id="szszig"
                  [(ngModel)]="szszig" name="szszig">
-          <button class="toolbutton" (click)="szamlaszam()" type="button" style="margin-left: 1px">
+          <button class="toolbutton" (click)="szamlaszam()" type="button" style="margin-left: 1em">
             <i class="fa fa-angle-right" aria-hidden="true"></i>
           </button>
         </div>
