--- a/src/app/projekt/projekt-napelem/projekt-napelem.component.html
+++ b/src/app/projekt/projekt-napelem/projekt-napelem.component.html
@@ -31,7 +31,7 @@
 
     <div class="editform-okcancel">
       <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="editform-cancelbutton" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+      <button class="editform-cancelbutton" type="button" (click)="cancel()">Mégsem</button>
     </div>
   </form>
 </div>
