--- a/src/app/projektjegyzet/projekt-jegyzet-list/projekt-jegyzet-list.component.html
+++ b/src/app/projektjegyzet/projekt-jegyzet-list/projekt-jegyzet-list.component.html
@@ -1,7 +1,7 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>{{projektjegyzetservice.cim}}</h5>
   <div>
-    <button (click)="onKereses()" class="toolbutton" style="margin-right: 3px">
+    <button (click)="onKereses()" class="toolbutton">
       <i class="fa fa-search" aria-hidden="true"></i>
     </button>
     <button (click)="onUjtetel()" class="toolbutton">
