--- a/src/app/projektkapcsolat/projektkapcsolat-levalasztas/projektkapcsolat-levalasztas.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-levalasztas/projektkapcsolat-levalasztas.component.html
@@ -3,7 +3,7 @@
   <div class="editform-row">
     Biztosan le akarja választani ezt a tételt a projektről?
   </div>
-  <div class="editform-okcancel" style="margin-bottom: 10px">
+  <div class="editform-okcancel">
     <button class="editform-okbutton" type="button" (click)="ok()">Ok</button>
     <button class="editform-cancelbutton" type="button" (click)="cancel()">Mégsem</button>
   </div>
