--- a/src/app/bizonylat/bizonylat-storno/bizonylat-storno.component.html
+++ b/src/app/bizonylat/bizonylat-storno/bizonylat-storno.component.html
@@ -3,7 +3,7 @@
   <div class="editform-row">
     Biztosan stornozni akarja ezt a tételt?
   </div>
-  <div class="editform-okcancel" style="margin-bottom: 10px">
+  <div class="editform-okcancel">
     <button class="editform-okbutton" type="button" (click)="ok()">Ok</button>
     <button class="editform-cancelbutton" type="button" (click)="cancel()">Mégsem</button>
   </div>
