--- a/src/app/bizonylat/bizonylattetel-szerkesztes/bizonylattetel-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylattetel-szerkesztes/bizonylattetel-szerkesztes.component.html
@@ -152,7 +152,7 @@
     </div>
   </div>
 
-  <div class="editform-okcancel" style="margin-bottom: 10px">
+  <div class="editform-okcancel">
     <button class="editform-okbutton" type="button" (click)="onSubmit()">Ok</button>
     <button class="editform-cancelbutton" type="button" (click)="cancel()">Mégsem</button>
   </div>
