--- a/src/app/bizonylat/bizonylat-list/bizonylat-list.component.html
+++ b/src/app/bizonylat/bizonylat-list/bizonylat-list.component.html
@@ -10,7 +10,7 @@
                         (Uj)="doUjtetel()">
   </app-bizonylattoolbar>
 
-  <div appHscroll style="overflow-x: auto;overflow-y: hidden;margin-bottom: 10px">
+  <div appHscroll style="overflow-x: auto;overflow-y: hidden">
     <app-bizonylattabla #tabla
                         [items]="Dto"
                         (forid)="onId($event)"
