--- a/src/app/bizonylat/bizonylattabla/bizonylattabla.component.html
+++ b/src/app/bizonylat/bizonylattabla/bizonylattabla.component.html
@@ -1,4 +1,4 @@
-<table class="table table-bordered table-sm">
+<table>
   <thead>
   <tr>
     <th>
@@ -58,8 +58,8 @@
         </td>
 
         <td>
-          <div style="width: 250px">{{item.Ugyfelnev}}</div>
-          <div style="width: 250px">{{item.Ugyfelcim}}</div>
+          <div style="width: 20em">{{item.Ugyfelnev}}</div>
+          <div style="width: 20em">{{item.Ugyfelcim}}</div>
         </td>
 
         <td>
