--- a/src/app/projekt/projekttabla/projekt-tabla.component.html
+++ b/src/app/projekt/projekttabla/projekt-tabla.component.html
@@ -36,16 +36,16 @@
         <td *ngIf="!enIdclick">{{item.Projektkod}}</td>
         <td>{{item.Statusz}}</td>
         <td>
-          <div style="width: 200px">{{item.Ugyfelnev}}</div>
-          <div style="width: 250px">{{item.Ugyfelcim}}</div>
+          <div style="width: 20em">{{item.Ugyfelnev}}</div>
+          <div style="width: 20em">{{item.Ugyfelcim}}</div>
         </td>
         <td>
           <div>{{item.Ugyfelemail}}</div>
           <div>{{item.Ugyfeltelefonszam}}</div>
         </td>
         <td>
-          <div style="width: 300px">{{item.Telepitesicim}}</div>
-          <div style="width: 150px">{{item.Projektjellege}}</div>
+          <div style="width: 30em">{{item.Telepitesicim}}</div>
+          <div style="width: 30em">{{item.Projektjellege}}</div>
         </td>
         <td>
           <div style="width:120px" [style.background-color]="MuszakiallapotColor(item.Muszakiallapot)">{{item.Muszakiallapot}}</div>
