--- a/src/app/projekt/projekt-list/projekt-list.component.html
+++ b/src/app/projekt/projekt-list/projekt-list.component.html
@@ -18,7 +18,7 @@
                         (eventBezar)="doExportbezar()"></app-projekt-export>
   </ng-container>
 
-  <div appHscroll style="overflow-x: auto;overflow-y: hidden;margin-bottom: 10px">
+  <div appHscroll style="overflow-x: auto;overflow-y: hidden">
     <app-projekt-tabla id="tabla" #tabla
                        [Dto]="Dto"
                        (forid)="onId($event)"
